# compiler

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark-results.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  execution-path.md  experimental.md  promotion-checklist.md  stable-api.md  support-policy.md
examples/: requirements-dev.txt  requirements.txt  改动.md
examples/.github/workflows/: ci.yml
examples/benchmarks/: README.md  baseline.quick.json  run_bench.py
examples/tensor_cpu/: __init__.py  abi.py  codegen.py  dispatcher.py  graph.py  jit_matmul.py  lazy.py  ops.py  pro.md  runtime.py  shape_inference.py  static_graph.py  tensor.py  tracer.py  train_jit.py  vjp.py
examples/tensor_cpu/jit/: api.py
examples/tensor_cpu/nn/: jit.py  modules.py
examples/tensor_cpu/optim/: adam.py  sgd.py
examples/tensor_cpu/passes/: __init__.py  constfold.py  cse.py  dce.py  fusion.py  pipeline.py
examples/test/: conftest.py  test_advanced.py  test_benchmark_harness.py  test_comprehensive.py  test_jit_core.py  test_passes.py  test_training.py
experimental/: __init__.py  codegen_v2.py  control_flow.py  lazy.py  runtime_pybind.py  symbolic.py  tracing_v2.py
md/: AGENTS.md  PROJECT_DETAILED_GUIDE_FOR_BEGINNERS.md  claude_suggestion.md  memories.md  readme.md  rode.md  建议.md  改动.md  简历.md  问题.md  面试.md  面试讲稿.md
tensor_cpu/: __init__.py  abi.py  dispatcher.py  jit_matmul.py  runtime.py  static_graph.py  tensor.py
tensor_cpu/autodiff/: train_jit.py  vjp.py
tensor_cpu/backend/: codegen.py  common.py  cpp_emitter.py  elementwise_lowering.py  matmul_lowering.py  memory_planner.py  op_lowering.py  reduce_lowering.py  shape_solver.py
tensor_cpu/frontend/: tracer.py
tensor_cpu/ir/: __init__.py  cpp_ast.py  cpp_codegen.py  graph.py  lowering.py  ops.py  shape_inference.py  tir.py  tir_to_cpp.py
tensor_cpu/jit/: __init__.py  api.py
tensor_cpu/nn/: __init__.py  jit.py  modules.py
tensor_cpu/optim/: __init__.py  adam.py  sgd.py
tensor_cpu/passes/: __init__.py  constfold.py  cse.py  dce.py  fusion.py  pipeline.py
