[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-cpu"
version = "0.1.0"
description = "CPU tensor compiler prototype with tracing, graph passes, native codegen, and JIT runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tensor CPU Team"}
]
keywords = ["compiler", "jit", "tensor", "codegen", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "codespell>=2.2.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
]
symbolic = [
    "sympy>=1.12",
]
bindings = [
    "pybind11>=2.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tensor_cpu*", "experimental*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["examples/test"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
]
markers = [
    "integration: end-to-end integration tests",
    "benchmark: lightweight performance checks",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["tensor_cpu", "experimental"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]
max-complexity = 15
per-file-ignores = [
    "__init__.py: F401",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "sympy.*",
    "pybind11.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # function call in default arg
    "B905",    # zip without strict
    "ARG001",  # unused function argument (common in compiler callbacks/visitors)
    "ARG002",  # unused method argument (common in base class / interface methods)
    "E741",    # ambiguous variable name (l, O, I) — common in math/tensor code
    "SIM108",  # ternary instead of if-else (readability preference)
    "SIM105",  # suppressible-exception
    "UP007",   # non-pep604-annotation-union (compat)
    "I",       # import sorting handled by isort (avoids conflicts with ruff)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/test/*" = ["ARG"]
"experimental/*" = ["F401", "F821", "F811", "ARG"]

[tool.bandit]
exclude_dirs = ["examples/test", ".venv"]
skips = ["B101", "B601"]

[tool.codespell]
skip = "*.lock,*.min.js,*.min.css"
ignore-words-list = "hist,fo,nd,wil,wan"
